--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "chroma-js": "^2.1.1",
+    "dat.gui": "^0.7.7",
     "postcss": "^7",
     "simplex-noise": "^2.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
