--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "black-hole-viz",
-  "description": "Vizualization of electromagnetic field near a black hole",
   "version": "0.1.0",
+  "description": "Vizualization of electromagnetic field near a black hole",
   "author": {
     "name": "Tomáš Trejdl",
     "email": "trejdtom@fel.cvut.cz",
     "url": "https://github.com/tomastrejdl"
   },
+  "main": "main.js",
   "scripts": {
     "serve": "vite",
     "build": "vite build",
@@ -22,13 +23,19 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "three": "^0.127.0",
     "troisjs": "^0.2.3",
-    "vue": "^3.0.11"
+    "vue": "^3.0.11",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.3",
     "@types/three": "^0.127.0",
     "@vitejs/plugin-vue": "^1.2.1",
+    "@vue/cli-plugin-router": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "@vue/compiler-sfc": "^3.0.11",
+    "csv-parse": "^4.15.4",
+    "event-stream": "^4.0.1",
+    "iconv-lite": "^0.6.2",
     "vite": "^2.1.5",
     "vue-cli-plugin-tailwind": "~2.0.6"
   },
