Ready for presentation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "autoprefixer": "^9",
     "chroma-js": "^2.1.1",
     "dat.gui": "^0.7.7",
+    "distributions": "^2.1.0",
     "postcss": "^7",
+    "random": "^3.0.6",
     "simplex-noise": "^2.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "three": "^0.127.0",
