--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
     "autoprefixer": "^9",
     "chroma-js": "^2.1.1",
     "dat.gui": "^0.7.7",
-    "distributions": "^2.1.0",
     "postcss": "^7",
     "random": "^3.0.6",
-    "simplex-noise": "^2.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "three": "^0.127.0",
     "troisjs": "^0.2.3",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.0-0"
+    "vue": "^3.0.11"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.3",
@@ -36,7 +33,6 @@
     "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
     "@vue/compiler-sfc": "^3.0.11",
-    "csv-parse": "^4.15.4",
     "event-stream": "^4.0.1",
     "iconv-lite": "^0.6.2",
     "vite": "^2.1.5",
